assets/style/favorites.css
body{
  background-color: #254252;
}

main{
  background-color: #254252;
  display: contents, space-evenly;
  align-items: center;
  padding: 30px;
}

header {
  background-color: #e37239;
  padding: 10px 0px 10px 0px
}

h1 {
  text-align: center;
  -webkit-text-fill-color: #171c2d;
  -webkit-text-stroke: 5px, #e37239;
}

img {
  width: 100%;
}


.removeBtn {
  position: absolute;
  right: 0px;
  top: 0px;
  border: none;
  background-color: rgba(23, 28, 45, 0.5);
  color: white;
}


.removeBtn:hover {
  background-color: rgba(255, 255, 255);
  color: red;
}

.drink-container {
  border: 5px solid #e37239;
  background-color: #e37239;
  margin: 10px;
  display: block;
  position: relative;
  padding: 0px
}

.drink-card {
  padding: 0px;
  font-size: 1.3rem;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  background-color: #EAB56F;
  cursor: pointer;
}

.drink-card:hover, .drink-card:active {
  box-shadow: 0 0 20px white;
}

.drink-card p {
  padding-left: 5px;
  padding-right: 5px;
  margin: 0px;
}


#favoritesList {
  text-align: center;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.recents{
  display: flex;
  align-items: center;
}

.button{
  background-color: #171c2d;
}

#favoritesList{
  display: flex;
  justify-content: center;
  justify-content: space-evenly;
}

#returnBtnLink {
  position: absolute; 
  left: 10px;
}

#returnBtnLink button {
  border-radius: 15%;
  font-size: 20px;
  background-color: #171c2d;
  padding: 8px;
  color:#e37239;
  border: none;
}

#returnBtnLink button:hover {
  background-color: #254252;
}

